--- a/view.html
+++ b/view.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>YouTube</title>
+    <link rel="icon" href="https://cdn-icons.flaticon.com/png/128/3128/premium/3128307.png?token=exp=1650474431~hmac=9e6ac9a741e49fbd0127f739bd5cec05" />
 </head>
 <link rel="stylesheet" href="view.css" />
  
